--- a/book.bib
+++ b/book.bib
@@ -28,4 +28,9 @@
   publisher={Wiley Online Library}
 }
 
-
+@book{finch2016,
+  title={Multilevel modeling using R},
+  author={Finch, W Holmes and Bolin, Jocelyn E and Kelley, Ken},
+  year={2016},
+  publisher={Crc Press}
+}
